--- a/style.css
+++ b/style.css
@@ -19,11 +19,12 @@ body {
 }
 
 /* header */
+
 .header {
     padding: 32px;
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
 }
 
 .header__logo, 
@@ -35,17 +36,17 @@ body {
     text-align: right;
 }
 
-.header_nav ul {
+.header__nav ul {
     padding-left: 0;
     display: flex;
     gap: 64px;
 }
 
-.header_nav li {
+.header__nav li {
     list-style: none;
 }
 
-.header_nav a {
+.header__nav a {
     list-style: none;
     font-weight: 300;
     font-size: 14px;
@@ -54,10 +55,16 @@ body {
     text-decoration: none;
 }
 
+.header__nav a:hover {
+    text-decoration: underline;
+    color: orange;
+    
+}
+
 .header__btn {
     display: inline-block;
     padding: 16px 24px;
-    background: linear-gradient(93.22deg, #E1E1E1 8.37%, #FFFFFF 99.95%);
+    background: #E1E1E1;
     box-shadow: 0px 4px 50px rgba(37, 37, 37, 0.08), inset 1px 1px 1px rgba(135, 135, 135, 0.32);
     border-radius: 999px;
     font-weight: 600;
@@ -65,10 +72,18 @@ body {
     line-height: 21px;
     color: #24282E;
     text-decoration: none;
+    transition: .2s all ease-in-out;
 }
+
+.header__btn:hover {
+    background: #333;
+    color: #FFF;
+}
+
 /* header end */
 
 /* main */
+
 .main {
     text-align: center;
     padding: 180px 20px 161px 20px;
@@ -85,6 +100,11 @@ body {
     text-align: center;
     color: #F2F4F7;
     margin-bottom: 32px;
+    transition: .2s all ease-in-out;
+}
+
+.main__title:hover {
+    color: orange;
 }
 
 .mail__description {
@@ -100,7 +120,7 @@ body {
     margin-bottom: 80px;
 }
 
-.main___btn {
+.main__btn {
     display: inline-block;
     border: 2px solid #FC40F4;
     border-radius: 999px;
@@ -112,6 +132,13 @@ body {
     text-decoration: none;
     min-width: 240px;
     margin-bottom: 64px;
+    transition: .2s all ease-in-out;
+}
+
+.main__btn:hover {
+    transform: translateY(-10px);
+    color: orange;
+    border: 4px solid orange
 }
 
 .main__icons {
@@ -120,4 +147,80 @@ body {
     padding: 16px;
     justify-content: center;
 }
+
 /* main end */
+
+.header .material-icons {
+    color: #FFF;
+    font-size: 32px;
+}
+
+input {
+    display: none;
+}
+
+label {
+    display: none;
+}
+
+
+/* adaptation for tablet */
+
+@media (max-width: 992px){
+
+    .header__download {
+        display: none;
+    }
+
+    .main {
+        padding-top: 50px;
+    }
+
+    .main__title {
+        font-size: 24px;
+        line-height: 36px;
+    }
+
+    .mail__description {
+        font-size: 16px;
+        line-height: 21px;
+    }
+}
+
+/* adaptation for tablet end*/
+
+/* adaptation for mobile phone */
+
+@media (max-width: 700px){
+
+    body {
+        padding: 20px;
+    }
+
+    label {
+        display: block;
+    }
+
+    .header__nav {
+        text-align: center;
+        position: fixed;
+        padding-top: 100px;
+        top: 0;
+        left: 0;
+        width: 150px;
+        height: 100%;
+        background: #333;
+        transform: translateX(-200%);
+        transition: .3s all ease-in-out;
+    }
+
+    .header__nav ul {
+        flex-direction: column;
+    }
+
+    input:checked~.header__nav {
+        transform: translateX(0);
+    }
+}
+
+/* adaptation for mobile phone end*/
